Fix button spacing in event popup

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -238,6 +238,7 @@
                 font-size: 14px;
             }
             .tui-full-calendar-section-button {
+                margin-top: 10px;
                 border: 0;
                 display: flex;
                 align-items: center;
